<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="price_range_format">%1\$d - %2\$d</string>
    <string name="app_name">Green House</string>
    <string name="select_language">Select Language</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="select_lang">Select Language</string>
    <string name="english">English</string>
    <string name="english_desc">Hello, I am John Doe!</string>
    <string name="arabic">Arabic</string>
    <string name="arabic_desc">مرحبًا، أنا جون دو!</string>
    <string name="btn_continue">Continue</string>
    <string name="auction">Auction</string>
    <string name="auction_title">Discover, Connect,\n Exchange Now</string>
    <string name="auction_desc">Unleash the Power of Dynamic Auctions \n Today!</string>
    <string name="onBoard2_title2">Unlock Fair Market\n Opportunities</string>
    <string name="onBoard2_desc2">Empower Your Bids, Unlock Limitless\n Opportunities in Fair Market.
    </string>
    <string name="onBoard3_title3">Your Money, Our First\n Priority</string>
    <string name="onBoard3_desc3">Where Your Wealth Finds Its \nBest Value.</string>
    <string name="green_house">Green House</string>
    <string name="mobil_num_show">Mobile number</string>
    <string name="enter_mobil">Enter mobile number</string>
    <string name="password">Password</string>
    <string name="sign_in_forgot_pass">Forgot Password?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="new_user">New User?</string>
    <string name="register_here"><u>Register here</u></string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgot_desc">Enter your mobile number to reset your password</string>
    <string name="send_verify_code">Send Verification Code</string>
    <string name="mobil_verify">Mobile number Verification</string>
    <string name="mobil_verify_desc">We have sent a code sent to</string>
    <string name="resend_code">Resend Code in </string>
    <string name="forgot_verify">Verify</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_desc">Your new password must different from previous used passwords</string>
    <string name="new_pass">New password</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="btn_save">Save</string>
    <string name="signup_layout_title">Are you a</string>
    <string name="bidder">Bidder</string>
    <string name="seller">Seller</string>
    <string name="signup_mobile_num">Mobile number</string>
    <string name="signup_mobile_num_desc">We will send the one time code on this mobile number
    </string>
    <string name="already_hav_account">Already have an account?</string>
    <string name="signup_screen2_title2">Are you a Seller?</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="enter_personal_detail">Enter your personal details</string>
    <string name="full_name">Full name</string>
    <string name="email_address">Email address(Optional)</string>
    <string name="profile_pass">Password</string>
    <string name="profile_confirm_pass">Confirm password</string>
    <string name="terms_and_condition_privacy_policy">By Continuing, you agree our all <u><b>Terms &amp; Conditions</b></u> and <u><b>Privacy Policy.</b></u></string>
    <string name="privacy_policy1"><u>Privacy Policy</u></string>
    <string name="continue_word">Continue</string>
    <string name="vegetables">Vegetables</string>
    <string name="dates">Dates</string>
    <string name="fruits">Fruits</string>
    <string name="featured_products">Featured products</string>
    <string name="viewall">View All</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="search">Search</string>
    <string name="search_desc">Explore our new categories to find auctioned fruits, vegetables, and dates from various sellers.
    </string>
    <string name="top_search">Top Searches</string>
    <string name="top_search_cauliflower">Cauliflower</string>
    <string name="new_listing">New Listings</string>
    <string name="top_search_spinach">Spinach</string>
    <string name="top_search_view_more">View more</string>
    <string name="show_result_fruit">Showing results for Fruits</string>
    <string name="all">All</string>
    <string name="products">Products</string>
    <string name="product_details_desc">Explore our new categories to find auctioned
        fruits, vegetables, and dates
    </string>
    <string name="product_from_same_sellers">Product from Same Sellers</string>
    <string name="place_a_bid">Place a Bid</string>
    <string name="highest_bid">Highest Bid</string>
    <string name="account_blocked">Account Blocked!</string>
    <string name="account_blocked_desc">Account blocked due to exploiting
        cancellation policy. Contact Help &amp; Support.
    </string>
    <string name="ok_got_it">OK, Got it!</string>
    <string name="place_Bid_title">Place your Bid</string>
    <string name="your_max_bid">Your Max Bid</string>
    <string name="btn_confirm_bid">Confirm Bid</string>
    <string name="confirm_bid_title">Your bid has been placed successfully</string>
    <string name="confirm_bid_desc">SAR xxx has been freezed from your wallet.
        It will be deducted once your won the auction
        else it will be unfreezed
    </string>
    <string name="change_bid">Change Bid</string>
    <string name="about_seller">About Seller</string>
    <string name="reviews"> Reviews</string>
    <string name="rating_reviews">Rating &amp; Reviews</string>
    <string name="view">View All Reviews</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="sort_by">Sort by</string>
    <string name="most_favourite">Most Favourite</string>
    <string name="most_selling">Most Selling</string>
    <string name="nearest_seller">Nearest Seller</string>
    <string name="highest_rating">Highest Rating</string>
    <string name="lowest_rating">Lowest Rating</string>
    <string name="newly_listed">Newly Listed</string>
    <string name="my_bids">My Bids</string>
    <string name="bids">Bids</string>
    <string name="bid_in_process">Bidding In-process</string>
    <string name="bid_in_process_desc">In-process auction will be shown here</string>
    <string name="you_won">You won this auction</string>
    <string name="you_lost">You lost this auction</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_Status">Status</string>
    <string name="status_won_auction">Won Auction</string>
    <string name="status_loss_auction">Lost Auction</string>
    <string name="filter_product_category">Products Category</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="congrats_won_auction">Congrats! You won this auction.</string>
    <string name="order_time_remain">Ordering Time Remaining</string>
    <string name="your_bid">Your Bid</string>
    <string name="quantity">Quantity</string>
    <string name="box_count">Box Count</string>
    <string name="box_height"> Height</string>
    <string name="box_length"> Length</string>
    <string name="box_width">Width</string>
    <string name="process_to_deliver">Process to Deliver</string>
    <string name="bid_details_winning_bid">Winning Bid</string>
    <string name="shipping_method_title">Shipping Method</string>
    <string name="shipping_method_desc">You have 20 mins. to place this order otherwise
        it will be auto-cancelled.
    </string>
    <string name="select_shipping_method">Select Shipping Method</string>
    <string name="price_details">Price Details</string>
    <string name="product_price">Product Price</string>
    <string name="value_add_tax">VAT</string>
    <string name="total_price">Total Price</string>
    <string name="remaining_amount">Remaining amount to be paid is SAR </string>
    <string name="please_click_place_order">Please click to placeholder button to
        pay remaining amount and place your order.
    </string>
    <string name="btn_place_order">Place order</string>
    <string name="select_ship_method_pick_myself">I will pick by myself</string>
    <string name="order_place_success">Order Placed Successfully!</string>
    <string name="track_your_order">Congratulations! Your orders has been placed
        You can track your order number()
    </string>
    <string name="btn_ok_continue">OK, Continue</string>
    <string name="order_not_placed">Oops! Order not Placed!</string>
    <string name="order_not_placed_desc">We\'re sorry, your order could not be processed.
        Please try again later.</string>
    <string name="btn_please_try_again">Please try again!</string>
    <string name="view_all_details">View order details</string>
    <string name="bidding_details_loss">Oops! You lost this auction.</string>
    <string name="your_bidding_in_progress">Your Bidding is in Progress.</string>
    <string name="unfilled_seller_request">Unfilled top bid seller request</string>
    <string name="products_filter_price_range">Price range</string>
    <string name="products_filter_bid_clos_time_range">Bid Closing Time Range</string>
    <string name="seller_rating">Seller Ratings</string>
    <string name="clear_all">Clear All</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="switch_to_seller">Switch to Seller</string>
    <string name="wallet">Wallet</string>
    <string name="seller_wallet">Wallet\nBalance</string>
    <string name="my_orders">My Orders</string>
    <string name="favourites">Favourites</string>
    <string name="account_setting">Account Settings</string>
    <string name="about_green_house">About Green house</string>
    <string name="change_password">Change Password</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_address">My Addresses</string>
    <string name="change_language">Change Language</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="total_balance">Total Balance</string>
    <string name="wallet_term_condition">Wallets money will be used as per its <b><u>Terms &amp; Conditions</u></b></string>
    <string name="freezed_balance">Freezed balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="transaction_history">Transaction History</string>
    <string name="add_money_to_wallet">Add Money to Wallet</string>
    <string name="aed_price">SAR </string>
    <string name="btn_proceed_to_add">Proceed to Add</string>
    <string name="favourite_seller">Favourite Sellers</string>
    <string name="about_us">About us</string>
    <string name="change_password_change_desc">Your new password must different from\nprevious used passwords</string>
    <string name="update">Update</string>
    <string name="add_new_address">+ Add New Address</string>
    <string name="hindi_lang">Hindi</string>
    <string name="urdu_lang">Urdu</string>
    <string name="urdu_desc">ہیلو، میں جان ڈو ہوں!</string>
    <string name="faq">Frequently asked\nQuestions</string>
    <string name="question_about">Questions about</string>
    <string name="getting_start">Getting Started</string>
    <string name="how_to_bidding">How to Bidding</string>
    <string name="top_questions">Top Questions</string>
    <string name="faq_view_all">View all</string>
    <string name="select_address">Select Address</string>
    <string name="bid_closing_time_range">Bid Closing Time Range</string>
    <string name="_0_7_hr" tools:ignore="TypographyDashes">0 - 0 hr.</string>
    <string name="_0_hr">0 hr.</string>
    <string name="address">Address</string>
    <string name="_24hr">24 hr.</string>
</resources>