<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lang_selection"
        tools:context=".fragment.sellerfragemnt.SellerMyProductFilter">

        <View
            android:id="@+id/topView"
            android:layout_width="85dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:background="@drawable/view_top_verify_num" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filter_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/topView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/filter_by"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_heading_21"
            android:textStyle="bold" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/filter_heading"
            android:layout_marginTop="30dp"
            android:background="#D9D9D9" />

        <TextView
            android:id="@+id/productCategoryHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view2"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/filter_product_category"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/name_size_17"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/productCategoryHeading"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/allText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_radio_button_selected"
                android:drawablePadding="20dp"
                android:text="@string/all"
                android:textAlignment="viewStart"
                android:textColor="#4A4A4A"
                android:textSize="@dimen/text_size_15_desc"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/vegetableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/ic_radio_button_unselected"
                android:drawablePadding="20dp"
                android:text="@string/vegetables"
                android:textAlignment="viewStart"
                android:textColor="#4A4A4A"
                android:textSize="@dimen/text_size_15_desc"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fruitesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/ic_radio_button_unselected"
                android:drawablePadding="20dp"
                android:text="@string/fruits"
                android:textAlignment="viewStart"
                android:textColor="#4A4A4A"
                android:textSize="@dimen/text_size_15_desc"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/datesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:drawableStart="@drawable/ic_radio_button_unselected"
                android:drawablePadding="20dp"
                android:text="@string/dates"
                android:textAlignment="viewStart"
                android:textColor="#4A4A4A"
                android:textSize="@dimen/text_size_15_desc"
                android:textStyle="normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/timeRangeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/bid_closing_time_range"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_19_subheading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/_0_7_hr"
            android:textAlignment="center"
            android:textColor="@color/greenhousetheme"
            android:textSize="@dimen/name_size_17"
            android:textStyle="bold" />

        <com.google.android.material.slider.Slider
            android:id="@+id/timeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeRangeHeading"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="5dp"
            android:stepSize="1"
            android:valueFrom="0"
            android:valueTo="24"
            app:labelBehavior="gone"
            app:thumbColor="@color/greenhousetheme"
            app:tickVisible="false"
            app:trackColorActive="@color/greenhousetheme"
            app:trackColorInactive="#D9D9D9" />

        <TextView
            android:id="@+id/timeStartingRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeSlider"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:text="@string/_0_hr"
            android:textAlignment="center"
            android:textColor="#575757"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeSlider"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="15dp"
            android:text="@string/_24hr"
            android:textAlignment="center"
            android:textColor="#575757"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/addressHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/timeStartingRange"
            android:layout_marginStart="15dp"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/euclid_circular_medium"
            android:text="@string/address"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/name_size_17"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/selectAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressHeading"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ededed_border"
            android:elevation="@dimen/elevation_5">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/idAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="21dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:drawableEnd="@drawable/ic_black_down"
                android:text="@string/select_address"
                android:textAlignment="viewStart"
                android:textColor="#B3000000"
                android:textSize="@dimen/name_size_17"
                android:textStyle="normal" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttonLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectAddress"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_75"
                android:layout_marginStart="15dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/button_text_size_17"
                android:fontFamily="@font/euclid_circular_medium"
                app:cornerRadius="10dp"
                app:strokeColor="#CFCFCF"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_75"
                android:layout_marginStart="15dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/greenhousetheme"
                android:elevation="@dimen/elevation_5"
                android:text="@string/apply"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size_17"
                android:fontFamily="@font/euclid_circular_medium"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <View
            android:layout_width="115dp"
            android:layout_height="4dp"
            android:layout_below="@id/buttonLayer"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bottom_black_view_3dp" />

    </RelativeLayout>
</layout>