<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_lang_selection"
        android:orientation="vertical"
        tools:context=".fragment.bidderfragment.MyBidFilter">

        <View
            android:id="@+id/topView"
            android:layout_width="85dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:background="@drawable/view_top_verify_num" />

        <TextView
            android:id="@+id/filter_by_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="19dp"
            android:text="@string/filter_by"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/profile_heading_21"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#D9D9D9" />

        <TextView
            android:id="@+id/statusHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:text="@string/filter_Status"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/name_size_17"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/allAuctionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_radio_button_selected"
            android:drawablePadding="20dp"
            android:paddingVertical="5dp"
            android:text="@string/all"
            android:textAlignment="viewStart"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/wonAuctionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_radio_button_unselected"
            android:drawablePadding="20dp"
            android:paddingVertical="5dp"
            android:text="@string/status_won_auction"
            android:textAlignment="viewStart"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lostAuctionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_radio_button_unselected"
            android:drawablePadding="20dp"
            android:paddingVertical="5dp"
            android:text="@string/status_loss_auction"
            android:textAlignment="viewStart"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/productCategoryHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="27dp"
            android:text="@string/filter_product_category"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/name_size_17"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/allText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_radio_button_selected"
            android:drawablePadding="20dp"
            android:paddingVertical="5dp"
            android:text="@string/all"
            android:textAlignment="viewStart"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vegetableText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_radio_button_unselected"
            android:drawablePadding="20dp"
            android:paddingVertical="5dp"
            android:text="@string/vegetables"
            android:textAlignment="viewStart"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fruitesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_radio_button_unselected"
            android:drawablePadding="20dp"
            android:paddingVertical="5dp"
            android:text="@string/fruits"
            android:textAlignment="viewStart"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/datesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/ic_radio_button_unselected"
            android:drawablePadding="20dp"
            android:paddingVertical="5dp"
            android:text="@string/dates"
            android:textAlignment="viewStart"
            android:textColor="#4A4A4A"
            android:textSize="@dimen/text_size_15_desc"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_75"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/euclid_circular_medium"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/button_text_size_17"
                app:cornerRadius="10dp"
                app:strokeColor="#CFCFCF"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applyButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_75"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/greenhousetheme"
                android:elevation="@dimen/elevation_5"
                android:fontFamily="@font/euclid_circular_medium"
                android:text="@string/apply"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size_17"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <View
            android:layout_width="115dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bottom_black_view_3dp" />


    </LinearLayout>
</layout>